--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .bg{
-    background-image: url(images/food.jpg) ;
+    background-image: url(../images/food.jpg) ;
     background-size: cover;
 }
 
