--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 .box{
     width: 330px;
-    padding: 2rem 1rem;
+    padding: 2rem;
     margin: 50px auto;
     background-color: rgba(255, 255, 255, 0.237);
     border-radius: 10px;
@@ -26,7 +26,22 @@ form input{
     padding: 12px 20px;
     margin-bottom:10px;
     border-radius:20px;
-    background: #e4e4e4;   
+    background: #e4e4e4;
+}
+
+form select{
+    width: 104%;
+    outline: none;
+    border: 1px solid #fff;
+    padding: 12px 15px;
+    margin-bottom:10px;
+    border-radius:20px;
+    background: #e4e4e4;
+    /* color: #746a6a; */
+}
+
+select:hover{
+    cursor: pointer;
 }
 
 .button{
